<resources>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="timelabel_pre_time" translatable="false">"Nu klockan "</string>
    <string name="title_activity_daily_forecast" translatable="false">DailyForecastActivity</string>
    <string name="title_activity_hourly_forecast" translatable="false">HourlyForecastActivity</string>
    <string name="title_activity_time_machine" translatable="false">TimeMachineActivity</string>
    <string name="dots" translatable="false">....</string>


    <string name="title_activity_maps" translatable="false">Map</string>


    <string name="app_name">Forecastly</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="forecastio">Powered by Forecast</string>
    <string name="getting_weather_data">Getting the weather data....</string>
    <string name="hour_label">Hourly</string>
    <string name="humidity">Humidity</string>
    <string name="no_daily_forecast_data">No weather data available</string>
    <string name="no_network_toast">Network is unavailable!</string>

    <string name="not_available" translatable="false">N/A</string>
    <string name="ok_button">OK</string>
    <string name="precip_label">Precipitation?</string>
    <string name="seven_days">7 Days</string>
    <string name="the_weather_was_label">the temperature of the selected day.</string>
    <string name="no_temp" translatable="false">--</string>

    <string name="weeks_weather_label">Weather for the week</string>
    <string name="hour_by_hour">Hourly</string>
    <string name="on_text">"On "</string>
    <string name="will_the_temp">"The highest temperature will be "</string>
    <string name="degrees_Text">" degrees."</string>
    <string name="and_it_will">"There will be "</string>
    <string name="time_text">"At "</string>
    <string name="the_temp_will_text">"The temperature will be "</string>
    <string name="snow">Chance of snow</string>
    <string name="sleet">Chance of sleet</string>
    <string name="hail">Chance of hail</string>
    <string name="rain">Chance of rain</string>
    <string name="week">Week</string>
    <string name="today">Today</string>

    <string name="close_app_button_title">Close</string>
    <string name="location_dialog_title">Location services not available</string>
    <string name="location_dialog_message">Location services is turned off, this app requires to know your location to get the correct weather data.\n\nAfter enabling Location Services it may take a few seconds before the correct weather is showing</string>
    <string name="location_dialog_positive_button">Open Location Settings</string>
    <string name="precip_dialog_title">Expected precipitation</string>
    <string name="precip_dialog_message1">"Up to "</string>
    <string name="precip_dialog_message2">"mm per hour"</string>
    <string name="dialog_alert_title">Approaching storm</string>
    <string name="alert_dialog_alert_title">Storm Alert!</string>
    <string name="alert_dialog_km_away">" km away"</string>
    <string name="daily_upto">"Up to "</string>
    <string name="daily_mmanhour">mm an hour</string>

    <string name="pick_location_toast">You must pick a location</string>
    <string name="type_desired_location_title">Type desired location</string>
    <string name="type_and_pick_location">Type and pick a location</string>
    <string name="powered_by_google">Powered by Google</string>


</resources>

