<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="#BF000000">

    <RelativeLayout
        android:id="@+id/contentDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_desired_location_title"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>


        </LinearLayout>


        <AutoCompleteTextView
            android:id="@+id/autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@android:color/white"
            android:hint="@string/type_and_pick_location"
            android:textColorHint="@android:color/darker_gray"/>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentDialog"
        android:layout_marginTop="5dp"
        android:background="#80000000"

        android:orientation="horizontal">
        <Button
            android:id="@+id/alertDialogCloseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:singleLine="true"

            android:text="@string/close_app_button_title"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/alertDialogButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="50"
            android:background="?android:attr/selectableItemBackground"
            android:singleLine="true"

            android:text="@string/ok_button"
            android:textColor="@android:color/white"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/powered_by_google"
        android:id="@+id/textView3"
        android:layout_above="@+id/linearLayout4"
        android:layout_centerHorizontal="true"

        android:textColor="#808080"
        android:textSize="10sp" />


</RelativeLayout>