
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context=".MainActivity"
                android:background="#ff607d8b">


<RelativeLayout
    android:layout_above="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_temp"
        android:id="@+id/temperatureLabel"
        android:textColor="@android:color/white"
        android:textSize="200sp"
        android:layout_below="@+id/yearLabel"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/degreeImageView"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:src="@drawable/degree"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dots"
        android:id="@+id/timeLabel"
        android:textColor="#80f4ffea"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:id="@+id/yearLabel"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/timeLabel"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:weightSum="100"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/temperatureLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:id="@+id/humidityLabel"
                android:textColor="#80f4ffea"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_temp"
                android:id="@+id/humidityValue"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precip_label"
                android:id="@+id/precipLabel"
                android:textColor="#80f4ffea"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_temp"
                android:id="@+id/precipValue"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecastio"
        android:id="@+id/textView"
        android:textColor="#64f4ffea"
        android:textSize="10sp"
        android:onClick="onPoweredByClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iconImageView"
            android:src="@drawable/cloudy_night"
            android:layout_alignTop="@+id/summaryLabel"
            android:layout_toLeftOf="@+id/temperatureLabel"
            android:layout_toStartOf="@+id/temperatureLabel"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_weather_data"
            android:id="@+id/summaryLabel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_alignBottom="@+id/temperatureLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alertImageView"
        android:layout_below="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:focusableInTouchMode="false"/>


</RelativeLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_label"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/hourlyButton"
            android:layout_weight="1"
            android:background="#455A64"
            android:textColor="@android:color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven_days"
            android:id="@+id/sevenDaysButton"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:background="#455A64"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/timemachine"
        android:id="@+id/timemachine"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refreshImageView"
        android:src="@drawable/refresh"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"/>

    <ProgressBar

        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress"
        android:indeterminateDuration="700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignBottom="@+id/refreshImageView"
        android:layout_alignRight="@+id/refreshImageView"
        android:layout_alignEnd="@+id/refreshImageView"

        android:layout_alignLeft="@+id/refreshImageView"
        android:layout_alignStart="@+id/refreshImageView"
        android:layout_alignTop="@+id/refreshImageView"/>



</RelativeLayout>

