<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"

    android:background="#80000000"
                tools:context="eu.brimir.forecastly.ui.DailyForecastActivity"

                android:gravity="center">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/thisWeekLabel"
        android:layout_marginTop="8dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:scrollbars="none"
        android:layout_marginBottom="8dp"

        android:layout_above="@+id/footer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/empty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/no_daily_forecast_data"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weeks_weather_label"
        android:id="@+id/thisWeekLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/footer"

        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="#80000000"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/dailyOkButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="?android:attr/selectableItemBackground"
            android:text="@string/ok_button"
            android:textColor="@android:color/white"

            />


    </LinearLayout>



</RelativeLayout>
