<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    style="@style/Theme.D1NoTitleDim"
    android:background="#BF000000">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contentDialog"
        android:layout_marginBottom="15dp">

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_alert_title"
            android:id="@+id/textView2"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <ImageView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/alert_white"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alertDialogArrow"

            android:src="@drawable/alertdialogarrow"

            android:layout_marginTop="41dp"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_alert_title"
            android:id="@+id/tvStormApproaching"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/distanceToStormTextView"
            android:layout_below="@id/alertDialogArrow"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"/>

    </RelativeLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/contentDialog"
        android:paddingTop="15dp"
        android:background="#80000000"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4">

        <Button
            android:id="@+id/alertDialogButton"
            android:text="@string/ok_button"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_height="wrap_content"
            android:singleLine="true"/>



    </LinearLayout>



</RelativeLayout>